replicated index builds not writing startIndexBuild and commitIndexBuild oplog entries

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 4.3.1
    • Affects Version/s: None
    • Component/s: Storage
    • None
    • Fully Compatible
    • ALL
    • Execution Team 2019-10-07
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      In SERVER-43149 and SERVER-43295, we updated a number of components that build indexes that have to be replicated to downstream nodes. There are still a few instances where we write a createIndexes oplog entry to the oplog without the corresponding startIndexBuild and commitIndexBuild oplog entries. These include:

            Assignee:
            Louis Williams
            Reporter:
            Benety Goh (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: