SERVER-43323 All replicated index builds should write startIndexBuild and commitIndexBuild oplog entries

This emits the two-phase oplog entries in cloner.cpp, system_index.cpp and
index_builder.cpp.