src/mongo/db/index_builder.cpp
@@ -41,6 +41,7 @@
 #include "mongo/db/concurrency/write_conflict_exception.h"
 #include "mongo/db/curop.h"
 #include "mongo/db/db_raii.h"
+#include "mongo/db/index_builds_coordinator.h"
 #include "mongo/db/op_observer.h"
 #include "mongo/db/repl/timestamp_block.h"
 #include "mongo/db/server_options.h"
@@ -161,23 +162,53 @@ Status IndexBuilder::_build(OperationContext* opCtx,
         }
     }
 
-    status = writeConflictRetry(opCtx, "Commit index build", ns.ns(), [opCtx, coll, &indexer, &ns] {
-        WriteUnitOfWork wunit(opCtx);
-        auto status = indexer.commit(opCtx,
-                                     coll,
-                                     [opCtx, coll, &ns](const BSONObj& indexSpec) {
-                                         opCtx->getServiceContext()->getOpObserver()->onCreateIndex(
-                                             opCtx, ns, coll->uuid(), indexSpec, false);
-                                     },
-                                     MultiIndexBlock::kNoopOnCommitFn);
-        if (!status.isOK()) {
-            return status;
-        }
+    // Emit startIndexBuild and commitIndexBuild oplog entries if supported by the current
+    // FCV.
+    auto opObserver = opCtx->getServiceContext()->getOpObserver();
+    auto fromMigrate = false;
+    auto buildUUID = serverGlobalParams.featureCompatibility.isVersionInitialized() &&
+            serverGlobalParams.featureCompatibility.getVersion() ==
+                ServerGlobalParams::FeatureCompatibility::Version::kFullyUpgradedTo44
+        ? boost::make_optional(UUID::gen())
+        : boost::none;
 
-        IndexTimestampHelper::setGhostCommitTimestampForCatalogWrite(opCtx, ns);
-        wunit.commit();
-        return Status::OK();
-    });
+    if (buildUUID) {
+        opObserver->onStartIndexBuild(
+            opCtx, coll->ns(), coll->uuid(), *buildUUID, {_index}, fromMigrate);
+    }
+
+    status = writeConflictRetry(
+        opCtx,
+        "Commit index build",
+        ns.ns(),
+        [opCtx, coll, buildUUID, fromMigrate, &spec = _index, &indexer, &ns] {
+            WriteUnitOfWork wunit(opCtx);
+
+            auto status = indexer.commit(
+                opCtx,
+                coll,
+                [opCtx, coll, buildUUID, fromMigrate, &ns](const BSONObj& indexSpec) {
+                    // If two phase index builds are enabled, the index build will be coordinated
+                    // using startIndexBuild and commitIndexBuild oplog entries.
+                    if (!IndexBuildsCoordinator::get(opCtx)->supportsTwoPhaseIndexBuild()) {
+                        opCtx->getServiceContext()->getOpObserver()->onCreateIndex(
+                            opCtx, ns, coll->uuid(), indexSpec, fromMigrate);
+                    }
+                },
+                [opCtx, coll, buildUUID, fromMigrate, &spec, &ns] {
+                    if (buildUUID) {
+                        opCtx->getServiceContext()->getOpObserver()->onCommitIndexBuild(
+                            opCtx, coll->ns(), coll->uuid(), *buildUUID, {spec}, fromMigrate);
+                    }
+                });
+            if (!status.isOK()) {
+                return status;
+            }
+
+            IndexTimestampHelper::setGhostCommitTimestampForCatalogWrite(opCtx, ns);
+            wunit.commit();
+            return Status::OK();
+        });
     if (!status.isOK()) {
         return status;
     }
