jstests/noPassthrough/auth_reject_mismatching_logical_times.js
@@ -4,6 +4,7 @@
  * @tags: [
  *   requires_replication,
  *   requires_sharding,
+ *   two_phase_index_builds_unsupported,
  * ]
  */
 (function() {
